--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -1,3 +1,119 @@
+@article{bokhorst2015compliance,
+  title={Compliance rates with the Prostate Cancer Research International Active Surveillance (PRIAS) protocol and disease reclassification in noncompliers},
+  author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
+  journal={European urology},
+  volume={68},
+  number={5},
+  pages={814--821},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{oMahonyOptimaInterval,
+  title={The Influence of Disease Risk on the Optimal Time Interval between Screens for the Early Detection of Cancer: A Mathematical Approach},
+  author={O’Mahony, James F and van Rosmalen, Joost and Mushkudiani, Nino A and Goudsmit, Frans-Willem and Eijkemans, Marinus JC and Heijnsdijk, Eveline AM and Steyerberg, Ewout W and Habbema, J Dik F},
+  journal={Medical Decision Making},
+  volume={35},
+  number={2},
+  pages={183--195},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{drizopoulosPersScreening,
+author = {Rizopoulos, Dimitris and Taylor, Jeremy M. G. and Van Rosmalen, Joost and Steyerberg, Ewout W. and Takkenberg, Johanna J. M.},
+title = {Personalized screening intervals for biomarkers using joint models for longitudinal and survival data},
+journal = {Biostatistics},
+volume = {17},
+number = {1},
+pages = {149},
+year = {2016},
+doi = {10.1093/biostatistics/kxv031},
+URL = { + http://dx.doi.org/10.1093/biostatistics/kxv031},
+eprint = {/oup/backfile/content_public/journal/biostatistics/17/1/10.1093_biostatistics_kxv031/3/kxv031.pdf}
+}
+
+@article{bebu2017OptimalScreening,
+author = {Bebu, Ionut and Lachin, John M.},
+title = {Optimal screening schedules for disease progression with application to diabetic retinopathy},
+journal = {Biostatistics},
+year = {2017},
+doi = {10.1093/biostatistics/kxv009},
+}
+
+@article{tsiatis2004joint,
+  title={Joint modeling of longitudinal and time-to-event data: an overview},
+  author={Tsiatis, Anastasios A and Davidian, Marie},
+  journal={Statistica Sinica},
+  pages={809--834},
+  year={2004},
+  publisher={JSTOR}
+}
+
+@article{tosoian2011active,
+  title={Active surveillance program for prostate cancer: an update of the Johns Hopkins experience},
+  author={Tosoian, Jeffrey J and Trock, Bruce J and Landis, Patricia and Feng, Zhaoyong and Epstein, Jonathan I and Partin, Alan W and Walsh, Patrick C and Carter, H Ballentine},
+  journal={Journal of Clinical Oncology},
+  volume={29},
+  number={16},
+  pages={2185--2190},
+  year={2011},
+  publisher={American Society of Clinical Oncology}
+}
+
+@article{welty2015extended,
+  title={Extended followup and risk factors for disease reclassification in a large active surveillance cohort for localized prostate cancer},
+  author={Welty, Christopher J and Cowan, Janet E and Nguyen, Hao and Shinohara, Katsuto and Perez, Nannette and Greene, Kirsten L and Chan, June M and Meng, Maxwell V and Simko, Jeffry P and Cooperberg, Matthew R and others},
+  journal={The Journal of urology},
+  volume={193},
+  number={3},
+  pages={807--811},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{loeb2013systematic,
+  title={Systematic review of complications of prostate biopsy},
+  author={Loeb, Stacy and Vellekoop, Annelies and Ahmed, Hashim U and Catto, James and Emberton, Mark and Nam, Robert and Rosario, Derek J and Scattoni, Vincenzo and Lotan, Yair},
+  journal={European urology},
+  volume={64},
+  number={6},
+  pages={876--892},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{keegan2012active,
+  title={Active surveillance for prostate cancer compared with immediate treatment},
+  author={Keegan, Kirk A and Dall'Era, Marc A and Durbin-Johnson, Blythe and Evans, Christopher P},
+  journal={Cancer},
+  volume={118},
+  number={14},
+  pages={3512--3518},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{parmigiani1998designing,
+  title={Designing observation times for interval censored data},
+  author={Parmigiani, Giovanni},
+  journal={Sankhy{\=a}: The Indian Journal of Statistics, Series A},
+  pages={446--458},
+  year={1998},
+  publisher={JSTOR}
+}
+
+@article{bokhorst2016decade,
+  title={A decade of active surveillance in the PRIAS study: an update and evaluation of the criteria used to recommend a switch to active treatment},
+  author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and PRIAS study group and others},
+  journal={European Urology},
+  volume={70},
+  number={6},
+  pages={954--960},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @book{rizopoulos2012joint,
   title={Joint models for longitudinal and time-to-event data: With applications in R},
   author={Rizopoulos, Dimitris},
